# routingpy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MANIFEST.in  README.html  README.md  README.rst  docker-compose.yml  environment.yml  misc.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  style.yapf  test_httpbin.py  tox.ini  travis.yml
.github/workflows/: ci-tests.yml  publish-tags.yml
docs/: Makefile  conf.py  index.rst
examples/: README.md  basic_examples.ipynb  basic_vroom.ipynb  compare_providers.ipynb
routingpy/: __init__.py  __version__.py  attribute_matches.py  base.py  client_base.py  client_default.py  convert.py  direction.py  exceptions.py  expansion.py  isochrone.py  matrix.py  optimization.py  raster.py  utils.py  valhalla_attributes.py
routingpy/routers/: __init__.py  arcgis.py  base.py  bing.py  bingmaps.py  google.py  graphhopper.py  heremaps.py  mapbox_osrm.py  mapbox_valhalla.py  mapquest.py  openrouteservice.py  opentripplanner.py  opentripplanner_v2.py  osrm.py  tomtom.py  valhalla.py  vroom.py
test_data/: andorra-latest.osm.pbf
tests/: __init__.py  docker-compose.yml  raster_example.tiff  test_arcgis.py  test_base.py  test_bing.py  test_convert.py  test_e2e.py  test_google.py  test_graphhopper.py  test_helper.py  test_heremaps.py  test_integration.py  test_mapbox_osrm.py  test_mapbox_valhalla.py  test_mapquest.py  test_openrouteservice.py  test_opentripplanner.py  test_opentripplanner_v2.py  test_osrm.py  test_tomtom.py  test_utils.py  test_valhalla.py  test_vroom.py  utils.py
