[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "routingpy"
version = "1.1.0"
description = "One lib to route them all."
authors = ["Nils Nolde <nils@gis-ops.com>", "Tim Ellersiek <tim@gis-ops.com>"]
license = "Apache2"
readme = 'README.rst'

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.20.0"
# For the Jupyter notebooks:
shapely = {version = "^1.7.0", optional = true}
ipykernel = {version = "^5.3.4", optional = true}
matplotlib = {version = "^3.4.1", optional = true}
contextily = {version = "^1.1.0", optional = true}
geopandas = {version = "^0.8.2", optional = true}
descartes = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
responses = "^0.10.0"
coverage = "^6.3.2"
pre-commit = "^2.7.1"
pytest = "^6.2.5"
build = "^0.7.0"
setuptools-scm = "^6.4.2"

[tool.poetry.extras]
notebooks = ["shapely", "ipykernel", "geopandas", "contextily", "matplotlib", "descartes"]

[tool.setuptools_scm]
write_to = "routingpy/__version__.py"
write_to_template = """
__version__ = "{version}"
"""
version_scheme = "post-release"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \.venv
  | dist
  | build
)/
'''
