[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "routingpy"
version = "1.2.1"
description = "One lib to route them all."
authors = ["Nils Nolde <nils@gis-ops.com>", "Tim Ellersiek <tim@gis-ops.com>", "Christian Beiwinkel <christian@gis-ops.com>"]
license = "Apache2"
readme = 'README.rst'

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.20.0"
# For the Jupyter notebooks:
shapely = {version = "^2.0.0", optional = true}
ipykernel = {version = "^6.0.0", optional = true}
matplotlib = {version = "^3.4.1", optional = true}
contextily = {version = "^1.1.0", optional = true}
geopandas = {version = "^0.8.2", optional = true}
descartes = {version = "^1.0.0", optional = true}
pytz = "^2023.3"

[tool.poetry.extras]
notebooks = ["shapely", "ipykernel", "geopandas", "contextily", "matplotlib", "descartes"]

[tool.poetry.group.dev.dependencies]
sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinxnotes-strike = "^1.2"
responses = "^0.10.0"
coverage = "^7.0.0"
pre-commit = "^2.7.1"
pytest = "^7.0.0"
build = "^0.7.0"
setuptools-scm = "^7.0.0"

[tool.setuptools_scm]
write_to = "routingpy/__version__.py"
write_to_template = """
__version__ = "{version}"
"""
version_scheme = "post-release"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \.venv
  | dist
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 105
src_paths = ["routingpy", "tests"]
skip = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = ["E203", "E266", "E501", "F403", "E722", "F405"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
    "docs",
    "examples",
]
per-file-ignores = {}

line-length = 105

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
